BString: fix Split() for multiple characters separators...

as suggested by Janus in #14045. Thanks!
* add a unit test for BString::Split().